Revert "Fixed z-index"

--- a/src/styles/Background.css
+++ b/src/styles/Background.css
@@ -2,8 +2,6 @@
     background-color: #F0F5F5;
     width: 100%;
     height: 100vh;
-    position: relative;
-    z-index: 0;
 }
 /* /*  */
 .shape-1,
